[package]
name = "exportcase"
version = "1.0.19"
edition = "2021"
authors = ["Developer <dev@example.com>"]
description = "Opinionated naming convention validator for JS/TS modules"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
walkdir = "2.3"
swc_common = { version = "8.1.0", features = ["tty-emitter"] }
swc_ecma_parser = "11.1.3"
swc_ecma_ast = "8.1.2"

[[bin]]
name = "exportcase"
path = "src/main.rs"
