[package]
name = "exportcase"
version = "1.2.0"
edition = "2021"
authors = ["Developer <dev@example.com>"]
description = "Opinionated naming convention validator for JS/TS modules"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
walkdir = "2.3"
swc_common = { version = "14.0", features = ["tty-emitter"] }
swc_ecma_parser = "24.0"
swc_ecma_ast = "15.0"

[[bin]]
name = "exportcase"
path = "src/main.rs"
